--- a/Admin/angular.json
+++ b/Admin/angular.json
@@ -42,7 +42,8 @@
               "node_modules/ngx-ui-switch/ui-switch.component.css",
               "node_modules/slick-carousel/slick/slick.scss",
               "node_modules/slick-carousel/slick/slick-theme.scss",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "./node_modules/ngx-spinner/animations/square-jelly-box.css",
+              "./node_modules/ngx-spinner/animations/ball-scale-multiple.css",
               "src/assets/scss/bootstrap.scss",
               "src/assets/scss/app.scss",
               "src/assets/scss/icons.scss",
