--- a/Admin/.firebaserc
+++ b/Admin/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "preventapp2-fe1e0"
-  }
+    "f1": "preventapp-89091",
+    "default": "preventapp-89091"
+  },
+  "targets": {},
+  "etags": {}
 }
